--- a/src/Styles/Contact.css
+++ b/src/Styles/Contact.css
@@ -4,7 +4,7 @@
   align-items: center;
   justify-content: center;
   padding: 2rem;
-  min-height: 80vh; /* Adjust to fit your design */
+  min-height: 60vh; /* Adjust to fit your design */
 }
 
 .contact-text-center {
